--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -58,8 +58,8 @@
             </div>
             <div class="w3-content w3-center w3-padding-250 w3-round-xlarge header-logo">
                 <br/>
-                <h1 class="w3-margin w3-jumbo" style="color: white;">INSPECTifi</h1> <img class="w3-center" src="public/img/inspectify_logo_white.png" style="height:110px">
-                <br/> </div>
+                <h1 class="w3-jumbo" style="color: white;">INSPECTifi</h1> <img class="w3-center" src="public/img/inspectify_logo_white.png" style="height:110px">
+                <br><br/> </div>
             <br/>
             <div class="post header-analyze">
                 <p class="w3-xlarge" style="color: white">Analyze how your users interact with your webpage</p>
@@ -81,6 +81,7 @@
     <div class="w3-row-padding w3-padding-64 w3-container post" id="grid-1">
         <div class="w3-content">
             <h1 class="headline">Summary</h1>
+            <br>
             <div class="summary-block">
                 <div class="left-summary">
                     <p class="summary-header">REACTION TABLE</p>
@@ -89,7 +90,7 @@
                     <table class="table" id="emoji-table">
                         <tbody>
                             <tr>
-                                <td style="background-color: #E6EFF0"> <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
+                                <td style="background-color: #C5E0E4"> <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
                                     <p>Total: <span id="reaction-total-1"></span> </p>
                                 </td>
                                 <td style="background-color: #AFDBDE"> <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
@@ -103,6 +104,8 @@
                     </table>
                 </div>
             </div>
+            <br>
+            <br>
             <br>
             <br>
             <div class="summary-block">
@@ -139,15 +142,6 @@
                                     <div class="page-emo-count"> <i id="most-rated-page-ratings" class="fa fa-reaction fa-smile-o"><span> </span></i> </div>
                                 </td>
                             </tr>
-                            <tr>
-                                <th>Most Visited</th>
-                                <td>
-                                    <div class="page-name">index.html</div>
-                                </td>
-                                <td>
-                                    <div class="page-emo-count"> <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i> </div>
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -155,9 +149,11 @@
         </div>
     </div>
     <!-- Second Grid -->
+<!--
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="grid-2">
         <div class="w3-content"> </div>
     </div>
+-->
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
         <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1> </div>
     <!-- Footer -->
