Further improved word cloud

--- a/analytics_dashboard_feedback.html
+++ b/analytics_dashboard_feedback.html
@@ -62,8 +62,8 @@
 
         <nav class="effects">
             <ul>
-                <li> <a href="#"> Wordcloud </a> </li>
-                <li> <a href="#">Sentiment Analysis </a> </li>
+                <li> <a href="analytics_dashboard_feedback.html#cloud_div"> Wordcloud </a> </li>
+                <li> <a href="analytics_dashboard_feedback.html#sentiment_div">Sentiment Analysis </a> </li>
                 <li> <a href="#" onclick="hitDB()"> List </a> </li>
             </ul>
         </nav>
