--- a/analytics_dashboard_traffic.html
+++ b/analytics_dashboard_traffic.html
@@ -28,13 +28,13 @@
 </head>
 <body>
 
-  <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #36BFAF">
+  <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #267B82">
     <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
       <a class="w3-padding-large w3-hover-white w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     </li>
-    <li><a href="analytics_dashboard_home.html" class="w3-padding-large w3-white">Home</a></li>
+    <li><a href="analytics_dashboard_home.html" class="w3-padding-large">Home</a></li>
     <li class="w3-hide-small"><a href="analytics_dashboard_feedback.html" class="w3-padding-large w3-hover-white" id="click-button">Feedback</a></li>
-    <li class="w3-hide-small"><a href="analytics_dashboard_traffic.html" class="w3-padding-large w3-hover-white">Traffic</a></li>
+    <li class="w3-hide-small"><a href="analytics_dashboard_traffic.html" class="w3-white w3-padding-large w3-hover-white">Traffic</a></li>
   </ul>
 
 
