--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -157,8 +157,39 @@
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="grid-2">
         <div class="w3-content"> </div>
     </div>
-    <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">Quote of the day: <div id="qotd"></div></h1> </div>
+    <div class="w3-container w3-black w3-center w3-opacity w3-padding-64 quote-sec">
+        <h1 class="w3-margin w3-xlarge" style="font-family: Comic Sans MS;">
+            <!--
+
+            <style>
+            .quote-sec h1 {
+                background-color: lightgrey;
+                width: 600px;
+                border: 25px solid green;
+                padding: 40px;
+                margin: 50px;
+                }
+            </style>
+
+            <style>
+            img {
+                position: absolute;
+                left: 0px;
+                top: 0px;
+                z-index: 0;
+            }
+            div {
+                opacity: 0 !important;
+            }
+            </style>
+
+            <div class="image-container"></div>
+            <img class="background-img" src="public/img/ocean_.jpg">
+
+
+            -->
+            
+            Quote of the day: <div id="qotd"></div></h1> </div>
     <!-- Footer -->
     <footer class="w3-container w3-padding-32 w3-center w3-opacity" style="bottom:0">
         <div class="w3-xlarge w3-padding-32"> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a> <a href="#" class="social-link w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a> <a href="#" class="social-link w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a> <a href="#" class="social-link w3-hover-text-grey"><i class="fa fa-flickr"></i></a> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a> </div>
