--- a/analytics_dashboard_traffic.html
+++ b/analytics_dashboard_traffic.html
@@ -45,7 +45,7 @@
 
     <nav class="effects">
       <ul>
-        <li> <a href="index.html"> Wordcloud </a> </li>
+        <li> <a href="index.html"> World Map </a> </li>
         <li> <a href="index2.html"> Bar graph </a> </li>
         <li> <a href="index3.html"> List </a> </li>
       </ul>
