--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -154,12 +154,11 @@
         </div>
     </div>
     <!-- Second Grid -->
-    <div class="image-container"></div><img class="background-img" src="public/img/ocean_.jpg">
+    <div class="image-container"></div><img class="background-img-footer" src="public/img/ocean_.jpg" style="max-height: 435px">
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        
         <h1 class="w3-margin w3-xlarge">Quote of the day: <div id="qotd"></div></h1> </div>
         <!-- Footer -->
-        <footer class="w3-container w3-padding-32 w3-center w3-opacity" style="bottom:0">
+        <footer class="w3-container w3-padding-32 w3-center w3-opacity footer-block" style="bottom:0.5">
             <div class="w3-xlarge w3-padding-32"> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a> <a href="#" class="social-link w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a> <a href="#" class="social-link w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a> <a href="#" class="social-link w3-hover-text-grey"><i class="fa fa-flickr"></i></a> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a> </div>
         </footer>
     <script>
