--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -59,7 +59,7 @@
             <div class="w3-content w3-center w3-padding-250 w3-round-xlarge header-logo">
                 <br/> <img class="w3-center" src="public/img/inspectify_logo_white.png" style="height:110px">
                 <h1 class="w3-margin w3-jumbo" style="color: white;">INSPECTifi</h1>
-                <h3 style="color: white; font-family: 'Noto Serif'">- Inspectify is your one-stop shop for analysis and sythesis. View user feedback,
+                <h3 style="color: white; font-family: 'Noto Serif'">- Inspectify is your one-stop shop for analysis and synthesis. View user feedback,
                     website traffic, and more with this detailed dashboard -</h3>
                 <br/> </div>
             <br/>
